# barcode-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  barcode_generator.qrc  basic_app.sln  basic_app.vcxproj  basic_app.vcxproj.filters  conanfile.py
gene/: CMakeLists.txt  main.cpp
include/: barcode_generator.hpp  mainwindow.h  mainwindow.hpp  not_yet.h  not_yet.hpp  table_select.hpp  unique_number.hpp
include/barcode_generator/: barcode_generator.hpp
src/: barcode_generator.cpp  main.cpp  mainwindow.cpp  not_yet.cpp  table_select.cpp  unique_number.cpp
ui/: barcode_generator.ui
